# data_documentation

./: README.MD  pyproject.toml
EP/EP0005DS0014-KA_Dengue_LL/: datadictionary.yaml  metadata_2023_24.yaml
EP/EP0006DS0015-KA_Dengue_Daily_SUM/: datadictionary.yaml  metadata.yaml
documentation/EP/EP0005DS0014-KA_Dengue_LL/: datadictionary.md  datadictionary.yaml  metadata_2023_24.yaml
documentation/EP/EP0006DS0015-KA_Dengue_Daily_SUM/: datadictionary.yaml  metadata.yaml
documentation/EP/EP0017DS0042-KA_Dengue_Serotype_Survey_LL/: datadictionary.yaml
info/CS/CS0004DS0041-KA_20th_Livestock_Census/: datadictionary.yaml
info/CS/CS0007DS0041-20th_Livestock_Census/: metadata.yaml
info/CS/CS0007DS0041-KA_20th_Livestock_Census/: datadictionary.yaml  metadata.yaml
info/CS/CS0023DS0056-Bengaluru_Water_Tanker_Survey/: datadictionary.yaml  metadata.yaml
info/EP/EP0005DS0006-Bengaluru_City_Dengue_LL/: metadata.yaml
info/EP/EP0005DS0014-KA_Dengue_LL/: README.MD  metadata.yaml
info/EP/EP0005DS0066-Odisha_Dengue_LL/: metadata.yaml
info/EP/EP0005DS0067-KA_IHIP_Dengue_LL/: metadata.yaml
info/EP/EP0005DS0076-Hesaraghatta_Seromonitoring_Samples/: metadata.yaml
info/EP/EP0006DS0007-Bengaluru_City_Dengue_SUM/: metadata.yaml
info/EP/EP0006DS0013-KA_FMD_NIFMD_Seromonitoring_SUM/: datadictionary.yaml
info/EP/EP0006DS0015-KA_Dengue_Daily_SUM/: datadictionary.yaml  metadata.yaml
info/EP/EP0006DS0039-India_FMD_NIVEDI_Observational_Case_SUM/: datadictionary.yaml  metadata.yaml
src/catalogue/: __init__.py
src/data_documentation/: render_dictionary.py
(+48 files in other folders)
