[tool.poetry]
name = "catalogue"
version = "0.1.0"
description = ""
authors = ["Sai Sneha <sneha@artpark.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
